wingpanel-indicator-powersave (0.0.1)
  * Rebrand wingpanel-indicator-cpufreq
  * Remove CPU frequency adjustment
  * Add toggles for throttlectl options

Todo:

  * System Performance and GPU Performance are actually blind;
      need to find some way to actually check before setting.
      The gpu control program's output isn't clean and there's
      no *binary* way to check system wide runtime  power
      management options (see `throttlectl check`).
  * GPU Performance sets Nvidia only for now (only hardware I have)

--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
-Source: wingpanel-indicator-cpufreq
+Source: wingpanel-indicator-powersave
 Section: x11
 Priority: optional
-Maintainer: dirli <litandrej85@gmail.com>
+Maintainer: Que Quotion <quequotion@gmail.com>
 Build-Depends: debhelper-compat (= 13),
                libgranite-dev,
                libpolkit-gobject-1-dev,
@@ -12,12 +12,12 @@ Build-Depends: debhelper-compat (= 13),
                meson,
                valac
 Standards-Version: 4.5.0
-Homepage: https://github.com/Dirli/wingpanel-indicator-cpufreq
+Homepage: https://github.com/quequotion/wingpanel-indicator-powersave
 Rules-Requires-Root: no
 
-Package: wingpanel-indicator-cpufreq
+Package: wingpanel-indicator-powersave
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Enhances: wingpanel
-Description: Wingpanel CPUfreq indicator to control processor frequency
- Wingpanel-indicator-cpufreq is able to adjust the Intel p-state driver (Sandy Bridge and newer)
+Description: Wingpanel Powersave indicator to control system power usage
+ Wingpanel-indicator-powersave is a user-discretion power management utility
