--- a/meson.build
+++ b/meson.build
@@ -1,7 +1,7 @@
 project (
-  'cpufreq',
+  'powersave',
   ['c', 'vala'],
-  version: '3.0.0',
+  version: '0.0.1',
 )
 
 gettext_name = meson.project_name () + '-indicator'
